# persian-meter

./: Cargo.toml  README.md  line_counts.py  pick.sh  saeb-6583.txt
.github/: dependabot.yml
.github/workflows/: clippy.yml
hafiz/: 1.txt  10.txt  100.txt  101.txt  102.txt  106.txt  107.txt  108.txt  11.txt  111.txt  113.txt  116.txt  117.txt  118.txt  12.txt  122.txt  123.txt  124.txt  126.txt  128.txt  13.txt  132.txt  136.txt  137.txt  14.txt  141.txt  143.txt  144.txt  145.txt  146.txt  147.txt  149.txt  15.txt  150.txt  151.txt  152.txt  153.txt  154.txt  155.txt  157.txt  (+145 more)
hafiz-1/: 1.txt  10.txt  103.txt  104.txt  105.txt  109.txt  110.txt  112.txt  114.txt  115.txt  119.txt  120.txt  121.txt  125.txt  127.txt  129.txt  130.txt  131.txt  133.txt  134.txt  135.txt  138.txt  139.txt  140.txt  142.txt  148.txt  15.txt  156.txt  159.txt  16.txt  164.txt  165.txt  166.txt  168.txt  169.txt  17.txt  173.txt  177.txt  18.txt  180.txt  (+85 more)
hafiz-2/: 258.txt  261.txt  263.txt  266.txt  269.txt  273.txt  274.txt  275.txt  281.txt  282.txt  283.txt  290.txt  292.txt  297.txt  298.txt  301.txt  302.txt  303.txt  304.txt  305.txt  306.txt  307.txt  308.txt  309.txt  310.txt  311.txt  312.txt  313.txt  314.txt  315.txt  316.txt  317.txt  318.txt  319.txt  320.txt  321.txt  322.txt  323.txt  324.txt  325.txt  (+134 more)
src/: main.rs
