[package]
name = "persian-meter"
version = "0.1.4"
authors = ["Theodore Beers <theo.beers@fu-berlin.de>"]
edition = "2021"
description = "A program to detect the meter of a classical Persian poem"
license = "MIT"
repository = "https://github.com/theodore-s-beers/persian-meter"
keywords = ["Persian", "meter", "poetry", "prosody"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.27", features = ["derive"] }
regex = "1.7.0"
